# hermes-pupillabs

./: CHANGELOG.md  README.md  pyproject.toml
examples/: pupilcore.bat  pupilcore.sh  pupilcore.yml  pupiluvc.bat  pupiluvc.sh  pupiluvc.yml  video_codec.yml
src/hermes/pupillabs/: __init__.py  facade.py  producer.py  stream.py
src/hermes/pupillabs/core/: data_container.py  facade.py  producer.py  stream.py
src/hermes/pupillabs/uvc/: data_container.py  handler.py  producer.py  stream.py
