[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysio-hermes-pupillabs"
version = "0.0.4"
requires-python = ">=3.7"
authors = [
  { name="Maxim Yudayev", email="maxim.yudayev@gmail.com" },
  { name="e-Media Research Lab @ KU Leuven", email="emedia@kuleuven.be" },
]
description = "A Pupil Labs smartglasses support module for HERMES"
keywords = ["embedded ai", "wearables", "sensors", "eye tracking", "smartglasses", "ego vision", "pupil labs", "streaming", "realtime processing", "physiology"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: System :: Distributed Computing"
]
dependencies = [
  "pysio-hermes>=0.3.0",
  "pupil-labs-uvc",
]

[project.urls]
Homepage = "https://yudayev.com/hermes"
Documentation = "https://yudayev.com/hermes"
Repository = "https://github.com/maximyudayev/hermes-pupillabs.git"
Issues = "https://github.com/maximyudayev/hermes/issues"
Changelog = "https://github.com/maximyudayev/hermes-pupillabs/blob/main/CHANGELOG.md"
